# genzoo

./: LICENSE.md  README.md  awol.py  genzoo_pipeline.ipynb  inference_genzoo.py  prep_tars.py  pyproject.toml  train_genzoo.py  utils.py
hmr2/configs/: __init__.py  datasets_tar.yaml
hmr2/configs_hydra/data/: mix_all.yaml
hmr2/configs_hydra/data_filtering/: low1.yaml
hmr2/configs_hydra/experiment/: default.yaml  hmr_vit_transformer.yaml
hmr2/configs_hydra/paths/: default.yaml
hmr2/configs_hydra/trainer/: ddp.yaml  gpu.yaml
hmr2/datasets/: __init__.py  image_dataset.py  occlusion_augmentation.py  utils.py  vitdet_dataset.py
hmr2/models/: __init__.py  discriminator.py  hmr2.py  smpl_wrapper.py
hmr2/models/backbones/: vit.py
hmr2/models/heads/: smpl_head.py
hmr2/utils/: mesh_renderer.py  misc.py  render_openpose.py
